--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha --require babel-register",
-    "start": "nodemon -r babel-register "
+    "start": "nodemon -r babel-register server.js"
   },
   "repository": {
     "type": "git",
