--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,7 @@ before_script:
 
 script:
  - npm run test
+
+after_success:
+- ./node_modules/.bin/jscoverage lib lib-cov
+- ./node_modules/.bin/mocha --require babel-register api/tests/ -R mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js
