--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "mocha": "^5.1.1"
+    "mocha": "^5.1.1",
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
