--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script:
 
 after_success:
 - ./node_modules/.bin/jscoverage lib lib-cov
-- ./node_modules/.bin/mocha --require babel-register api/tests/ -R mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js
+- ./node_modules/.bin/mocha --require babel-register api/tests/requestRoutes.test.js -R mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js
