--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ script:
  - npm run test
 
 after_success:
-- ./node_modules/.bin/jscoverage lib lib-cov
-- ./node_modules/.bin/mocha --require babel-register api/tests/ -R mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js
+- npm run coverage
+
