--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "API for Maintenance-tracker",
   "main": "app.js",
   "scripts": {
-    "test": "mocha --require babel-register api/tests/",
-    "start": "nodemon -r babel-register server.js"
+    "test": "nyc --reporter=html --reporter=text mocha --require babel-register api/tests/*",
+    "start": "nodemon -r babel-register server.js",
+    "coverage": "nyc report --reporter=text-summary | coveralls"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,6 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
-    "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
@@ -38,7 +38,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "coveralls": "^3.0.1",
+    "istanbul": "^0.4.5",
     "mocha": "^5.1.1",
-    "mocha-lcov-reporter": "^1.3.0"
+    "nyc": "^11.8.0"
   }
 }
