--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,20 @@ language: node_js
 node_js:
  - "8.11.1"
 
-# env:
-#    CC_TEST_REPORTER_ID: a1951c2cbfb022c642a0b4ada7dfd7a0f3e2555f1acf5cd8e1f8485fae006c0e
-
 before_install:
 - npm install -g mocha
 
 before_script:
  - npm install
-# - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-# - chmod +x ./cc-test-reporter
-# - ./cc-test-reporter before-build
+ - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+ - chmod +x ./cc-test-reporter
+ - ./cc-test-reporter before-build
 
 script:
  - npm run test
 
-#after_script:
-#  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 after_success:
 
