--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha --require babel-register api/tests/*",
     "start": "nodemon -r babel-register server.js",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coverage-test": "nyc report --reporter=lcov"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
+    "codeclimate-test-reporter": "^0.5.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
