--- a/package.json
+++ b/package.json
@@ -27,21 +27,19 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
-    "codeclimate-test-reporter": "^0.5.0",
+    "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
     "express": "^4.16.3",
-    "nodemon": "^1.17.4",
-    "supertest": "^3.1.0",
-    "coveralls": "^3.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^5.1.1",
-    "nyc": "^11.8.0"
+    "nodemon": "^1.17.4",
+    "nyc": "^11.8.0",
+    "supertest": "^3.1.0"
   },
-
   "devDependencies": {
     "babel-cli": "^6.26.0"
   }
